--- a/templates/country/countryForm.html.twig
+++ b/templates/country/countryForm.html.twig
@@ -12,7 +12,7 @@
     {% endif %}
 
     <p><a target="_blank" href="https://flagsapi.com/">Prendre ici le code du pays</a></p>
-    <p>a placer dans le drapeau (code pays a remplacer !) : https://flagsapi.com/{CodePays}/shiny/64.png</p>
+    <p>a placer dans le drapeau (code pays a remplacer !) : https://flagsapi.com/CodePays/shiny/64.png</p>
         
     {# First form is the FUNCTION the second one is the var creates in the controller #}
     {{ form(form) }}
