--- a/templates/game/gameForm.html.twig
+++ b/templates/game/gameForm.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ajoutez un noveau jeu !{% endblock %}
+{% block title %}Ajoutez un nouveau jeu !{% endblock %}
 
 {% block body %}
         
