--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Inscription{% endblock %}
 
 {% block body %}
     {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
+    <h1>Inscription</h1>
 
     {{ form_errors(registrationForm) }}
 
@@ -16,7 +16,7 @@
         {{ form_row(registrationForm.email) }}
         <div class="col-2 formRowPassword">
             {{ form_row(registrationForm.plainPassword, {
-                label: 'Password'
+                label: 'Mot de passe'
             }) }}
         </div>
         {{ form_row(registrationForm.profilePicture) }}
