--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,6 +17,7 @@
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
+    <p>Mot de passe oublié ? <a href="{{ path('app_forgot_password_request') }}">Modifier mon mot de passe.</a></p>
 
     <button class="btn btn-lg btn-primary" type="submit">
         Se connecter
