Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	modified:   config/routes.yaml
	modified:   src/Controller/RegistrationController.php
	modified:   src/Controller/TeamController.php
	modified:   src/Entity/Roster.php
	modified:   src/Entity/Team.php
	deleted:    src/Exception/AuthenticationDenied.php
	new file:   src/Form/PlayerRosterType.php
	new file:   src/Form/RosterType.php
	modified:   src/Security/AppAuthenticator.php
	modified:   src/Security/EmailVerifier.php
	modified:   templates/security/login.html.twig
	modified:   templates/team/teamDetails.html.twig

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,6 +8,12 @@
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
+    {% for message in app.flashes('success') %}
+        <p>
+            {{message}}
+        </p>
+    {% endfor %}
+
     <h1>Veuillez vous identifier</h1>
     <label for="inputUsername">Pseudo</label>
     <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
