--- a/templates/team/teamDetails.html.twig
+++ b/templates/team/teamDetails.html.twig
@@ -8,8 +8,19 @@
             
     <p>Son siège sociale : <a href="{{ path('details_country', {'id': team.country.id}) }}">{{ team.country }}</a></p>
 
-    <a href="{{ path('edit_team', {'id': team.id}) }}" class="btn btn-warning">Modifier {{ team }}</a>
-    <a href="{{ path('delete_team', {'id': team.id}) }}" class="btn btn-danger">Supprimer {{ team }}</a>
+
+    {# Allowing modifications only to moderators and admin #}
+    {% if is_granted("ROLE_MODERATOR") %}
+
+        {# link to add a new roster #}
+        <a href="#" class="btn btn-warning">Ajouter un roster</a>
+        
+        {# link to modify a team #}
+        <a href="{{ path('edit_team', {'id': team.id}) }}" class="btn btn-warning">Modifier {{ team }}</a>
+
+        {# link to delete a team #}
+        <a href="{{ path('delete_team', {'id': team.id}) }}" class="btn btn-danger">Supprimer {{ team }}</a>
+    {% endif %}
 
 
 {% endblock %}
