Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch eSportXpertise
Changes to be committed:
	modified:   composer.lock
	new file:   migrations/Version20231115082334.php
	modified:   public/css/country.css
	modified:   public/css/game.css
	modified:   public/css/style.css
	modified:   public/css/team.css
	modified:   public/js/collectionTypeSocialMedia.js
	new file:   public/js/favorite.js
	new file:   public/js/gameDetails.js
	new file:   public/js/rostersType.js
	new file:   public/js/searchBars.js
	modified:   src/Controller/CountryController.php
	modified:   src/Controller/EditorController.php
	modified:   src/Controller/HomeController.php
	new file:   src/Controller/RosterController.php
	modified:   src/Controller/TeamController.php
	new file:   src/Controller/TournamentController.php
	modified:   src/Entity/PlayerRoster.php
	modified:   src/Entity/Team.php
	modified:   src/Entity/Tournament.php
	modified:   src/Entity/User.php
	modified:   src/Form/EditorType.php
	modified:   src/Form/PlayerRosterType.php
	modified:   src/Form/PlayerType.php
	modified:   src/Form/RosterType.php
	new file:   src/Form/TournamentType.php
	modified:   src/Repository/TeamRepository.php
	modified:   templates/base.html.twig
	modified:   templates/country/index.html.twig
	modified:   templates/editor/editorForm.html.twig
	modified:   templates/game/gameDetails.html.twig
	modified:   templates/home/index.html.twig
	new file:   templates/roster/index.html.twig
	new file:   templates/roster/rosterForm.html.twig
	modified:   templates/team/teamDetails.html.twig
	new file:   templates/tournament/index.html.twig
	new file:   templates/tournament/tournamentDetails.html.twig
	new file:   templates/tournament/tournamentForm.html.twig

--- a/public/css/country.css
+++ b/public/css/country.css
@@ -11,12 +11,18 @@
 }
 
 #countriesList li{
-    width: 15%;
+    width: 35%;
 }
 
 .countryContainer{
     display: flex;
     margin-bottom: 0;
+}
+
+.countryContainer img{
+    width: 15%;
+    height: 64px;
+    border: solid 1px #333;
 }
 
 .countryContainer figcaption{
