--- a/public/css/game.css
+++ b/public/css/game.css
@@ -23,6 +23,62 @@
     /* flex-wrap: wrap; */
 }
 
-.screenshots img{
-    width: 16%;
+.swiper {
+    width: 70%;
+    height: 25vh;
+    justify-content: center;
+    position: relative;
+    overscroll-behavior-y: auto;
 }
+
+.swiper .swiper-slide-next{
+    filter: none;
+    cursor: zoom-in;
+    transform: none;
+}
+
+.swiper figure{
+    filter: blur(5px);
+    transform: translateZ(-74.7659px) rotateY(-29.9657deg);
+    transform-style: preserve-3d;
+}
+
+.swiper img{
+    width: 100%;
+    height: 100%;
+    cursor: zoom-in;
+}
+
+
+/* Zoom the picture */
+.modal {
+    display: block;
+    position: fixed;
+    z-index: 999;
+    padding-top: 50px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    max-width: 70%;
+    max-height: 70%;
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+}
+  
