--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,13 @@
 body{
     margin: 0;
     padding: 0;
+    position: relative;
 }
+
+.hide{
+    display: none;
+}
+
 
 .logoSite{
     margin: 0;
