--- a/public/css/team.css
+++ b/public/css/team.css
@@ -16,3 +16,29 @@
 .teamLogo img{
     width: 50px;
 }
+
+
+/********************************ADD A FAVORITE **************************************************************/
+/* .starContainer{
+    /* height: 100%;
+    display: flex;
+    align-items: flex-end;
+} */
+
+.title{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+.title h1{
+    width: auto;
+}
+
+.favTeam{
+    color: #EBCB00;
+    cursor: pointer;
+    font-size: 2.5rem;
+}
