--- a/templates/game/gameDetails.html.twig
+++ b/templates/game/gameDetails.html.twig
@@ -8,7 +8,7 @@
         <figure class="gameCover">
 
             {# link to the cover of the game the image is in the api#}
-            <img src="{{ urlCover }}" alt="Affiche du jeu {{ game }} ">
+            <img  src="{{ urlCover }}" alt="Affiche du jeu {{ game }} ">
 
             <figcaption>
 
@@ -17,18 +17,39 @@
             </figcaption>
 
         </figure>
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                {# loop to search all the sceenshots on the api database for the game #}
+                {% for key, urlScreenshot in urlScreenshots %}
 
-        <figure class="screenshots">
+                    <figure class="swiper-slide" id="{{ key }}">
 
-            {# loop to search all the sceenshots on the api database for the game #}
-            {% for urlScreenshot in urlScreenshots|slice(0, 6) %}
 
-                {# display of all the scrennshots in the database #}
-                <img src="{{ urlScreenshot }}" alt="image du jeu {{ game }}">
+                        {# display of all the scrennshots in the database #}
+                        <img class="swiper-zoom-container" id="{{ key }}" src="{{ urlScreenshot }}" alt="image du jeu {{ game }}">
 
-            {% endfor %}
+                        
+                    </figure>
+                {% endfor %}
+            </div>
 
-        </figure>
+
+
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+ 
+        </div>
+
+
+        <!-- The Modal -->
+        <div id="myModal" class="hide">
+            <span id="closeCross" class="hide">&times;</span>
+            <img class="modal-content" id="modalImage">
+        </div>
 
         {# display of the game's release date. date_fr is a personal function implemented in twig by a filter who allows me to transform a date on a french version it means that the day and month are in french and the date is in 'l d F Y' type #}
         <p>Le jeu est sorti le {{ infos.0.release_dates.0.date | date_fr('l d F Y')}}</p>
