--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,15 +14,28 @@
         <ol>
             {% for user in users %}
                 <li>
-                    {{ user }}
+                    {{ user }} ||
                     {{ user.siteCoins }} <i class="fa-solid fa-coins" style="color: #f2d40d;"></i>
                 </li>
             {% endfor %}
 
         </ol>
     </aside>
-    {% if is_granted('ROLE_MODERATOR') %}
+
+    <aside>
+        <ol>
+            {# loop to take the teams in the data base limited at 10 needed and the sort allows me to sort the teams by  #}
+            {% for team in teams|sort((a, b) => b.users|length <=> a.users|length)|slice(0, 10) %}
+                <li>
+                    <a href="{{ path('details_team', {'id': team.id}) }}">{{ team }}</a> ||
+                    {{ team.users|length }} <i class="fa-solid fa-users"></i>
+                </li>
+            {% endfor %}
+
+        </ol>
+    </aside>
+    {# {% if is_granted('ROLE_MODERATOR') %}
         <h1>tu es l'admin</h1>
         
-    {% endif %}
+    {% endif %} #}
 {% endblock %}
